build/parser.output
Terminales no usados en la gramática

    INTEGER_I
    FOREACH
    INT
    PRINT
    JOIN
    PARSEDOUBLE


Estado 23 conflictos: 1 reducción/reducción
Estado 61 conflictos: 1 desplazamiento/reducción
Estado 75 conflictos: 13 desplazamiento/reducción
Estado 79 conflictos: 19 desplazamiento/reducción
Estado 107 conflictos: 1 desplazamiento/reducción
Estado 128 conflictos: 19 desplazamiento/reducción
Estado 129 conflictos: 19 desplazamiento/reducción
Estado 130 conflictos: 19 desplazamiento/reducción
Estado 131 conflictos: 19 desplazamiento/reducción
Estado 132 conflictos: 19 desplazamiento/reducción
Estado 133 conflictos: 19 desplazamiento/reducción
Estado 134 conflictos: 19 desplazamiento/reducción
Estado 135 conflictos: 19 desplazamiento/reducción
Estado 136 conflictos: 13 desplazamiento/reducción
Estado 137 conflictos: 13 desplazamiento/reducción
Estado 138 conflictos: 13 desplazamiento/reducción
Estado 139 conflictos: 13 desplazamiento/reducción
Estado 140 conflictos: 13 desplazamiento/reducción
Estado 141 conflictos: 13 desplazamiento/reducción
Estado 144 conflictos: 19 desplazamiento/reducción
Estado 145 conflictos: 19 desplazamiento/reducción
Estado 146 conflictos: 19 desplazamiento/reducción
Estado 147 conflictos: 19 desplazamiento/reducción
Estado 164 conflictos: 19 desplazamiento/reducción
Estado 165 conflictos: 1 desplazamiento/reducción
Estado 183 conflictos: 1 desplazamiento/reducción
Estado 187 conflictos: 19 desplazamiento/reducción
Estado 221 conflictos: 1 desplazamiento/reducción
Estado 242 conflictos: 19 desplazamiento/reducción
Estado 250 conflictos: 1 desplazamiento/reducción
Estado 252 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: lines

    2 lines: ε
    3      | lines line

    4 line: expr end
    5     | SYSTEM '.' OUT '.' PRINTLN '(' expr ')' end
    6     | SYSTEM '.' OUT '.' PRINTLN '(' ')' end
    7     | declaration end
    8     | declaration
    9     | assigment end
   10     | assigment
   11     | block
   12     | sentenciasIf
   13     | loopWhile
   14     | loopFor
   15     | function
   16     | sentenciasSwitch
   17     | BREAK end
   18     | RETURN expr end
   19     | RETURN end
   20     | larray
   21     | multiDimension

   22 sentenciasIf: IF '(' expr ')' block
   23             | IF '(' expr ')' block ELSE block

   24 loopWhile: WHILE '(' expr ')' block

   25 loopFor: FOR '(' declaration end expr end assigment ')' block
   26        | FOR '(' tipo ID DOSPUNTOS ID ')' block

   27 block: '{' lines '}'

   28 end: ';'

   29 case_list: ε
   30          | case_list case_stmt

   31 case_stmt: CASE expr DOSPUNTOS lines
   32          | DEFAULT DOSPUNTOS lines

   33 function: PUBLIC tipo ID '(' params ')' block
   34         | PUBLIC STATIC tipo ID '(' params ')' block

   35 params: ε
   36       | paramlist

   37 paramlist: tipo ID
   38          | tipo ID ',' paramlist

   39 declaration: tipo ID '=' expr
   40            | tipo ID
   41            | FINAL tipo ID '=' expr

   42 assigment: ID '=' expr

   43 multiDimension: tipo '[' ']' '[' ']' ID '=' NEW tipo '[' expr ']' '[' expr ']' end
   44               | tipo '[' ']' '[' ']' ID '=' '{' elementos '}' end

   45 tipo: INTEGER
   46     | TP_STRING
   47     | TP_FLOAT
   48     | TP_DOUBLE
   49     | BOOLEAN
   50     | TP_CHAR
   51     | VOID
   52     | BREAK
   53     | ARRAY
   54     | CONTINUE

   55 expr: expr '+' expr
   56     | expr '-' expr
   57     | expr '*' expr
   58     | expr '/' expr
   59     | expr '%' expr
   60     | '-' expr
   61     | expr AND expr
   62     | expr OR expr
   63     | expr LE expr
   64     | expr GE expr
   65     | expr '<' expr
   66     | expr '>' expr
   67     | expr EQ expr
   68     | expr NEQ expr
   69     | expr '&' expr
   70     | expr '|' expr
   71     | expr '^' expr
   72     | expr SHR expr
   73     | expr SHL expr
   74     | '!' expr
   75     | '(' expr ')'
   76     | '(' tipo ')' expr
   77     | VALUEOF '(' expr ')'
   78     | callFunction
   79     | ID '[' expr ']'
   80     | ID '[' expr ']' '=' expr
   81     | NUMBER
   82     | DECIMAL
   83     | FLOAD
   84     | STRING
   85     | CHAR
   86     | ID
   87     | TRUE
   88     | FALSE
   89     | CONTINUE
   90     | ID '[' expr ']' '[' expr ']'
   91     | ID '[' expr ']' '[' expr ']' '=' expr
   92     | ARRAYS '.' INDEXOF '(' expr ',' expr ')'
   93     | expr '.' EQUALS '(' expr ')'
   94     | expr '.' LENGTH
   95     | PARSEINT '(' expr ')'
   96     | PARSEFLOAT '(' expr ')'

   97 callFunction: ID '(' args ')'

   98 args: ε
   99     | arglist

  100 arglist: expr
  101        | expr ',' arglist

  102 sentenciasSwitch: SWITCH '(' expr ')' '{' case_list '}'

  103 elementos: expr ',' elementos
  104          | elementos ',' elementos
  105          | '{' elementos '}'
  106          | expr

  107 larray: tipo '[' ']' ID '=' NEW tipo '[' expr ']' end
  108       | tipo '[' ']' ID '=' '{' elementos '}' end
  109       | tipo '[' ']' ID '=' ID '.' ADD '(' expr ')' end


Terminales con las reglas donde aparecen

    $end (0) 0
    '!' (33) 74
    '%' (37) 59
    '&' (38) 69
    '(' (40) 5 6 22 23 24 25 26 33 34 75 76 77 92 93 95 96 97 102 109
    ')' (41) 5 6 22 23 24 25 26 33 34 75 76 77 92 93 95 96 97 102 109
    '*' (42) 57
    '+' (43) 55
    ',' (44) 38 92 101 103 104
    '-' (45) 56 60
    '.' (46) 5 6 92 93 94 109
    '/' (47) 58
    ';' (59) 28
    '<' (60) 65
    '=' (61) 39 41 42 43 44 80 91 107 108 109
    '>' (62) 66
    '[' (91) 43 44 79 80 90 91 107 108 109
    ']' (93) 43 44 79 80 90 91 107 108 109
    '^' (94) 71
    '{' (123) 27 44 102 105 108
    '|' (124) 70
    '}' (125) 27 44 102 105 108
    error (256)
    FLOAD <ftnt> (258) 83
    STRING <str> (259) 84
    ID <str> (260) 26 33 34 37 38 39 40 41 42 43 44 79 80 86 90 91 97 107 108 109
    CHAR <ch> (261) 85
    DECIMAL <dble> (262) 82
    NUMBER <num> (263) 81
    TRUE <num> (264) 87
    FALSE <num> (265) 88
    BOOLEAN (266) 49
    TP_DOUBLE (267) 48
    TP_FLOAT (268) 47
    TP_STRING (269) 46
    TP_CHAR (270) 50
    INTEGER_I (271)
    INTEGER (272) 45
    GE (273) 64
    LE (274) 63
    EQ (275) 67
    NEQ (276) 68
    SHR (277) 72
    SHL (278) 73
    OR (279) 62
    AND (280) 61
    IF (281) 22 23
    ELSE (282) 23
    WHILE (283) 24
    FOR (284) 25 26
    FOREACH (285)
    SWITCH (286) 102
    CASE (287) 31
    DEFAULT (288) 32
    BREAK (289) 17 52
    CONTINUE (290) 54 89
    RETURN (291) 18 19
    PUBLIC (292) 33 34
    STATIC (293) 34
    VOID (294) 51
    EQUALS (295) 93
    INT (296)
    NEW (297) 43 107
    ARRAYS (298) 92
    INDEXOF (299) 92
    SYSTEM (300) 5 6
    OUT (301) 5 6
    PRINTLN (302) 5 6
    VALUEOF (303) 77
    PRINT (304)
    JOIN (305)
    ARRAY (306) 53
    LENGTH (307) 94
    ADD (308) 109
    PARSEINT (309) 95
    PARSEFLOAT (310) 96
    PARSEDOUBLE (311)
    FINAL (312) 41
    DOSPUNTOS (313) 26 31 32
    UMINUS (314)


No terminales con las reglas donde aparecen

    $accept (81)
        on left: 0
    program <node> (82)
        on left: 1
        on right: 0
    lines <node> (83)
        on left: 2 3
        on right: 1 3 27 31 32
    line <node> (84)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 3
    sentenciasIf <node> (85)
        on left: 22 23
        on right: 12
    loopWhile <node> (86)
        on left: 24
        on right: 13
    loopFor <node> (87)
        on left: 25 26
        on right: 14
    block <node> (88)
        on left: 27
        on right: 11 22 23 24 25 26 33 34
    end (89)
        on left: 28
        on right: 4 5 6 7 9 17 18 19 25 43 44 107 108 109
    case_list <node> (90)
        on left: 29 30
        on right: 30 102
    case_stmt <node> (91)
        on left: 31 32
        on right: 30
    function <node> (92)
        on left: 33 34
        on right: 15
    params <plist> (93)
        on left: 35 36
        on right: 33 34
    paramlist <plist> (94)
        on left: 37 38
        on right: 36 38
    declaration <node> (95)
        on left: 39 40 41
        on right: 7 8 25
    assigment <node> (96)
        on left: 42
        on right: 9 10 25
    multiDimension <node> (97)
        on left: 43 44
        on right: 21
    tipo <tipo> (98)
        on left: 45 46 47 48 49 50 51 52 53 54
        on right: 26 33 34 37 38 39 40 41 43 44 76 107 108 109
    expr <node> (99)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
        on right: 4 5 18 22 23 24 25 31 39 41 42 43 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 79 80 90 91 92 93 94 95 96 100 101 102 103 106 107 109
    callFunction <node> (100)
        on left: 97
        on right: 78
    args <args> (101)
        on left: 98 99
        on right: 97
    arglist <args> (102)
        on left: 100 101
        on right: 99 101
    sentenciasSwitch <node> (103)
        on left: 102
        on right: 16
    elementos <node> (104)
        on left: 103 104 105 106
        on right: 44 103 104 105 108
    larray <node> (105)
        on left: 107 108 109
        on right: 20


Estado 0

    0 $accept: • program $end

    $default  reduce usando la regla 2 (lines)

    program  ir al estado 1
    lines    ir al estado 2


Estado 1

    0 $accept: program • $end

    $end  desplazar e ir al estado 3


Estado 2

    1 program: lines •
    3 lines: lines • line

    FLOAD       desplazar e ir al estado 4
    STRING      desplazar e ir al estado 5
    ID          desplazar e ir al estado 6
    CHAR        desplazar e ir al estado 7
    DECIMAL     desplazar e ir al estado 8
    NUMBER      desplazar e ir al estado 9
    TRUE        desplazar e ir al estado 10
    FALSE       desplazar e ir al estado 11
    BOOLEAN     desplazar e ir al estado 12
    TP_DOUBLE   desplazar e ir al estado 13
    TP_FLOAT    desplazar e ir al estado 14
    TP_STRING   desplazar e ir al estado 15
    TP_CHAR     desplazar e ir al estado 16
    INTEGER     desplazar e ir al estado 17
    IF          desplazar e ir al estado 18
    WHILE       desplazar e ir al estado 19
    FOR         desplazar e ir al estado 20
    SWITCH      desplazar e ir al estado 21
    BREAK       desplazar e ir al estado 22
    CONTINUE    desplazar e ir al estado 23
    RETURN      desplazar e ir al estado 24
    PUBLIC      desplazar e ir al estado 25
    VOID        desplazar e ir al estado 26
    ARRAYS      desplazar e ir al estado 27
    SYSTEM      desplazar e ir al estado 28
    VALUEOF     desplazar e ir al estado 29
    ARRAY       desplazar e ir al estado 30
    PARSEINT    desplazar e ir al estado 31
    PARSEFLOAT  desplazar e ir al estado 32
    FINAL       desplazar e ir al estado 33
    '-'         desplazar e ir al estado 34
    '('         desplazar e ir al estado 35
    '{'         desplazar e ir al estado 36
    '!'         desplazar e ir al estado 37

    $default  reduce usando la regla 1 (program)

    line              ir al estado 38
    sentenciasIf      ir al estado 39
    loopWhile         ir al estado 40
    loopFor           ir al estado 41
    block             ir al estado 42
    function          ir al estado 43
    declaration       ir al estado 44
    assigment         ir al estado 45
    multiDimension    ir al estado 46
    tipo              ir al estado 47
    expr              ir al estado 48
    callFunction      ir al estado 49
    sentenciasSwitch  ir al estado 50
    larray            ir al estado 51


Estado 3

    0 $accept: program $end •

    $default  aceptar


Estado 4

   83 expr: FLOAD •

    $default  reduce usando la regla 83 (expr)


Estado 5

   84 expr: STRING •

    $default  reduce usando la regla 84 (expr)


Estado 6

   42 assigment: ID • '=' expr
   79 expr: ID • '[' expr ']'
   80     | ID • '[' expr ']' '=' expr
   86     | ID •
   90     | ID • '[' expr ']' '[' expr ']'
   91     | ID • '[' expr ']' '[' expr ']' '=' expr
   97 callFunction: ID • '(' args ')'

    '('  desplazar e ir al estado 52
    '='  desplazar e ir al estado 53
    '['  desplazar e ir al estado 54

    $default  reduce usando la regla 86 (expr)


Estado 7

   85 expr: CHAR •

    $default  reduce usando la regla 85 (expr)


Estado 8

   82 expr: DECIMAL •

    $default  reduce usando la regla 82 (expr)


Estado 9

   81 expr: NUMBER •

    $default  reduce usando la regla 81 (expr)


Estado 10

   87 expr: TRUE •

    $default  reduce usando la regla 87 (expr)


Estado 11

   88 expr: FALSE •

    $default  reduce usando la regla 88 (expr)


Estado 12

   49 tipo: BOOLEAN •

    $default  reduce usando la regla 49 (tipo)


Estado 13

   48 tipo: TP_DOUBLE •

    $default  reduce usando la regla 48 (tipo)


Estado 14

   47 tipo: TP_FLOAT •

    $default  reduce usando la regla 47 (tipo)


Estado 15

   46 tipo: TP_STRING •

    $default  reduce usando la regla 46 (tipo)


Estado 16

   50 tipo: TP_CHAR •

    $default  reduce usando la regla 50 (tipo)


Estado 17

   45 tipo: INTEGER •

    $default  reduce usando la regla 45 (tipo)


Estado 18

   22 sentenciasIf: IF • '(' expr ')' block
   23             | IF • '(' expr ')' block ELSE block

    '('  desplazar e ir al estado 55


Estado 19

   24 loopWhile: WHILE • '(' expr ')' block

    '('  desplazar e ir al estado 56


Estado 20

   25 loopFor: FOR • '(' declaration end expr end assigment ')' block
   26        | FOR • '(' tipo ID DOSPUNTOS ID ')' block

    '('  desplazar e ir al estado 57


Estado 21

  102 sentenciasSwitch: SWITCH • '(' expr ')' '{' case_list '}'

    '('  desplazar e ir al estado 58


Estado 22

   17 line: BREAK • end
   52 tipo: BREAK •

    ';'  desplazar e ir al estado 59

    $default  reduce usando la regla 52 (tipo)

    end  ir al estado 60


Estado 23

   54 tipo: CONTINUE •
   89 expr: CONTINUE •

    ID        reduce usando la regla 54 (tipo)
    ')'       reduce usando la regla 54 (tipo)
    ')'       [reduce usando la regla 89 (expr)]
    '['       reduce usando la regla 54 (tipo)
    $default  reduce usando la regla 89 (expr)


Estado 24

   18 line: RETURN • expr end
   19     | RETURN • end

    FLOAD       desplazar e ir al estado 4
    STRING      desplazar e ir al estado 5
    ID          desplazar e ir al estado 61
    CHAR        desplazar e ir al estado 7
    DECIMAL     desplazar e ir al estado 8
    NUMBER      desplazar e ir al estado 9
    TRUE        desplazar e ir al estado 10
    FALSE       desplazar e ir al estado 11
    CONTINUE    desplazar e ir al estado 62
    ARRAYS      desplazar e ir al estado 27
    VALUEOF     desplazar e ir al estado 29
    PARSEINT    desplazar e ir al estado 31
    PARSEFLOAT  desplazar e ir al estado 32
    '-'         desplazar e ir al estado 34
    '('         desplazar e ir al estado 35
    ';'         desplazar e ir al estado 59
    '!'         desplazar e ir al estado 37

    end           ir al estado 63
    expr          ir al estado 64
    callFunction  ir al estado 49


Estado 25

   33 function: PUBLIC • tipo ID '(' params ')' block
   34         | PUBLIC • STATIC tipo ID '(' params ')' block

    BOOLEAN    desplazar e ir al estado 12
    TP_DOUBLE  desplazar e ir al estado 13
    TP_FLOAT   desplazar e ir al estado 14
    TP_STRING  desplazar e ir al estado 15
    TP_CHAR    desplazar e ir al estado 16
    INTEGER    desplazar e ir al estado 17
    BREAK      desplazar e ir al estado 65
    CONTINUE   desplazar e ir al estado 66
    STATIC     desplazar e ir al estado 67
    VOID       desplazar e ir al estado 26
    ARRAY      desplazar e ir al estado 30

    tipo  ir al estado 68


Estado 26

   51 tipo: VOID •
